# nmeasim

./: .gitignore  .gitlab-ci.yml  LICENSE.md  MANIFEST.in  pyproject.toml  readme.md  setup.cfg  setup.py
nmeasim/: gui.py  models.py  simulator.py
pyinstaller/: windows.spec
