[metadata]
name = nmeasim
author = Wei Li Jiang
author-email = wjiang87@gmail.com
home-page = https://gitlab.com/nmeasim/nmeasim
description = A Python GNSS/NMEA receiver simulation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = nmeasim/LICENSE
keywords = gnss glonass gps nmea simulator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = true
python_requires = >= 3.7
packages = nmeasim
install_requires =
    pyserial
    geographiclib
    importlib.metadata; python_version<'3.8'

[options.entry_points]
console_scripts =
    nmeasim = nmeasim.gui:main
